Bug 1254444 - Frame component should react to being focused by displaying a legible color in the memory tool. r=fitzgen
UltraBlame original commit: f7abc73ebddbff1d47753051faafda94c61916c3

--- a/devtools/client/themes/components-frame.css
+++ b/devtools/client/themes/components-frame.css
@@ -116,61 +116,6 @@ flex
 ;
 }
 .
-focused
-.
-frame
--
-link
--
-filename
-.
-focused
-.
-frame
--
-link
--
-column
-.
-focused
-.
-frame
--
-link
--
-line
-.
-focused
-.
-frame
--
-link
--
-host
-.
-focused
-.
-frame
--
-link
--
-colon
-{
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-color
-)
-;
-}
-.
 frame
 -
 link
@@ -387,5 +332,70 @@ orange
 display
 :
 block
+;
+}
+.
+focused
+a
+.
+frame
+-
+link
+-
+filename
+.
+focused
+span
+.
+frame
+-
+link
+-
+filename
+.
+focused
+.
+frame
+-
+link
+-
+column
+.
+focused
+.
+frame
+-
+link
+-
+line
+.
+focused
+.
+frame
+-
+link
+-
+host
+.
+focused
+.
+frame
+-
+link
+-
+colon
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
 ;
 }
